--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        echo "${{ secrets.DOCKERPW }}" | docker login https://hub.docker.com --username vfcevallos --password-stdin
+        docker login --username vfcevallos --password=${{ secrets.DOCKERPW}} --password-stdin
         docker image build -t vfcevallos/gitops:hello .
         docker push vfcevallos/gitops:hello
