--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        docker login --username vfcevallos --password=${{ secrets.DOCKERPW}} --password-stdin
+       proxy:
+        remoteurl: https://hub.docker.com/
+        username: vfcevallos
+        password: 7Monopoly$$
         docker image build -t vfcevallos/gitops:hello .
         docker push vfcevallos/gitops:hello
