--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,9 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-       proxy:
-        remoteurl: https://hub.docker.com/
-        username: vfcevallos
-        password: 7Monopoly$$
-        docker image build -t vfcevallos/gitops:hello .
-        docker push vfcevallos/gitops:hello
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "vfcevallos" --password-stdin
+        docker image build -t vfcevallos/gitops:hellov1.0 .
+        docker push [vfcevallos]/gitops:hellov1.0
