--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         cd ./python
         echo "${{ secrets.DOCKERPW }}" | docker login -u "vfcevallos" --password-stdin
-        docker image build -t vfcevallos/gitops:hellov1.0 .
-        docker push [vfcevallos]/gitops:hellov1.0
+        docker image build -t vfcevallos/gitops:hellov1.0 
+        docker push vfcevallos/gitops:hellov1.0
