--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "vfcevallos" --password-stdin
+        echo "${{ secrets.DOCKERPW }}" | docker login -u vfcevallos --password-stdin
         docker image build -t vfcevallos/gitops1:hellov1.0 .
         docker push vfcevallos/gitops1:hellov1.0
