--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
+        docker logout
         echo "${{ secrets.DOCKERPW }}" | docker login -u vfcevallos@gmail.com --password-stdin
         docker image build -t vfcevallos/gitops1:hellov1.0 .
         docker push vfcevallos/gitops1:hellov1.0
