--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,6 +24,6 @@ jobs:
       run: |
         cd ./python
         docker logout
-        echo "${{ secrets.DOCKERPW }}" | docker login -u vfcevallos@gmail.com --password-stdin
+        echo "${{ secrets.DOCKERPW }}" | docker login -u vfcevallos --password-stdin
         docker image build -t vfcevallos/gitops1:hellov1.0 .
         docker push vfcevallos/gitops1:hellov1.0
