--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        docker login -u vfcevallos --password-stdin
+        echo "$7Monopoly$$" | docker login --username vfcevallos --password-stdin
         docker image build -t vfcevallos/gitops1:hellov1.0 .
         docker push vfcevallos/gitops1:hellov1.0
